post is looking better

--- a/source/stylesheets/components/_item.scss
+++ b/source/stylesheets/components/_item.scss
@@ -49,3 +49,17 @@
 .item.item-post {
 	align-items: flex-start;
 }
+
+.item.item-post {
+	flex-direction: row-reverse;
+}
+
+.item.item-post-left {
+	flex-direction: row;
+}
+
+.item-post-image {
+	height: $baseUnit * 6;
+	width: 100%;
+	background: $blue;
+}
