--- a/source/publications.html.erb
+++ b/source/publications.html.erb
@@ -3,10 +3,13 @@ title: Coding the Humanities
 layout: main
 type: publications
 ---
+<% for item in 2..4 %>
+<% post_num = 1 %>
+<%= partial("partials/navigation", :locals => { :which_is_link_active => item }) %>
 <% blog('publications').articles.each do |post| %>
-<%= partial("partials/navigation", :locals => { :which_is_link_active => post.data.item }) %>
-<img class="" src="" alt="">
-<div class="item item-post">
+<% if post.data.item == item %>
+<div class="item item-post <% if (post_num % 2) == 1 %>item-post-left <% end %>">
+  <img class="item-post-image" src="post-image" alt="">
   <div class="column-left">
     <div class="block">
       <h1 class="textbar title"><%= post.title %></h1>
@@ -19,4 +22,7 @@ type: publications
     </div>
   </div>
 </div>
+<% post_num = post_num + 1 %>
+<% end %>
+<% end %>
 <% end %>
