--- a/source/stylesheets/components/_item.scss
+++ b/source/stylesheets/components/_item.scss
@@ -48,18 +48,20 @@
 
 .item.item-post {
 	align-items: flex-start;
+	border-top: $thirdUnit dashed $black;
 }
 
 .item.item-post {
-	flex-direction: row-reverse;
+	// flex-direction: row-reverse;
+  // text-align: right;
 }
 
-.item.item-post-left {
+.item.item-post.item-post-left {
 	flex-direction: row;
+	text-align: left;
 }
 
 .item-post-image {
-	height: $baseUnit * 6;
-	width: 100%;
-	background: $blue;
+	// height: $baseUnit * 6;
+	// width: 100%;
 }
