--- a/source/stylesheets/components/_block.scss
+++ b/source/stylesheets/components/_block.scss
@@ -77,10 +77,10 @@
   }
 }
 
-.publications .block-authors {
+.publications .block-authors, .projects .block-authors{
   text-align: right;
 }
 
-.publications .block-authors h3 {
+.publications .block-authors h3, .projects .block-authors h3 {
   border-top: $thirdUnit solid $black;
 }
