wip - finding error

--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,7 +1,7 @@
 <div class="reference-inner-container">
   <div class="reference">
-    <a href="<%= config.http_prefix + reference.type + '.html#' + reference.slug %>">
-      <p><%= reference.slug %></p>
+    <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.data.title %>">
+      <p><%= reference.data.title %></p>
     </a>
   </div>
 </div> 
