--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,7 +1,8 @@
 <div class="reference-inner-container">
   <div class="reference">
     <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.data.title %>">
-      <p><%= reference.data.title %></p>
+      <h4 class="reference-header"><%= reference.data.title %></h4>
+      <p class="reference-description"><%= reference.data.description %></p>
     </a>
   </div>
 </div> 
