--- a/source/stylesheets/components/_item.scss
+++ b/source/stylesheets/components/_item.scss
@@ -18,7 +18,12 @@
 }
 
 .item-body {
-	margin: 0 0 $baseUnit * 5 0;
+	margin: 0 0 $baseUnit * 2 0;
+}
+
+.item-body .column-left div:last-of-type.block {
+	padding-bottom: $baseUnit * 4;
+	
 }
 
 .item .column-left {
