--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,5 +1,59 @@
     <footer class="footer">
-      <h2>Footer</h2>
+      <div class="footer-description">
+        <div class="footer-logo-container">
+          <h1 class="textbar textbar-inverse title">Coding_</h1><br>
+          <h1 class="textbar textbar-inverse title">the_</h1><br>
+          <h1 class="textbar textbar-inverse title">Humanities</h1>
+        </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ad dignissimos distinctio quae autem nemo nesciunt sapiente vitae explicabo necessitatibus dolores aspernatur harum labore, quidem, ullam. Fugiat accusamus atque dolores.</p>
+        <h3>Contact: </h3>
+        <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
+      </div>
+
+      <div class="footer-nav">
+        <div class="footer-nav-btn-container">
+          <% link_to(config.http_prefix + 'projects.html#', {:class => ''}) do %> 
+          <button class="btn">Projects</button>
+          <% end %>
+          <% link_to(config.http_prefix + 'publications.html#', {:class => ''}) do %> 
+          <button class="btn">Publications</button>
+          <% end %>
+          <% link_to(config.http_prefix + '/#', {:class => ''}) do %> 
+          <button class="btn">Proces</button>
+          <% end %>
+        </div>
+        <ul class="footer-nav-list">
+          <li>
+            <% link_to(config.http_prefix + '#item-body-2', {:class => ''}) do %> From Content to Context 
+            <% end %>
+          </li>
+          <li>
+            <% link_to(config.http_prefix + '#item-body-3', {:class => ''}) do %>
+              To Curation
+            <% end %>
+          </li>
+          <li>
+            <% link_to(config.http_prefix + '#item-body-4', {:class => ''}) do %>
+              To Faciliation 
+            <% end %>
+          </li>
+          <li>
+            <% link_to(config.http_prefix + '#item-partners', {:class => ''}) do %> 
+              Partners 
+            <% end %>
+          </li>
+          <li>
+            <% link_to(config.http_prefix + '#item-about', {:class => ''}) do %> 
+              About 
+            <% end %>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-uva-container">
+        <img class="footer-uva-logo" src="images/uva-logo.svg" alt="">
+      </div>
+      
     </footer>
   </body>
 </html>
