--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,13 +1,83 @@
 .hammer {
   width: 100%;
-  padding: 0% 0 0 75%;
   background: $yellow;
 }
 
 .footer {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
   background: black;
-	height: $baseUnit * 10;
+	min-height: $baseUnit * 10;
+  padding: $baseUnit;
+  color: $lightgray;
 }
+
+.footer a {
+  height: auto;
+  color: $lightgray;
+}
+
+.footer-description {
+  width: 100%;
+  @media (min-width: $breakpoint-lg) {
+    width: 50%;
+  }
+}
+
+.footer-description .footer-logo-container {
+  margin-bottom: $baseUnit;
+}
+
+
+.footer-nav {
+  padding: $baseUnit *2 0;
+  width: 100%;
+  @media (min-width: $breakpoint-lg) {
+    padding: 0;
+    width: 50%;
+  }
+}
+.footer-nav-btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  @media (min-width: $breakpoint-lg) {
+    align-items: flex-end;
+  }
+}
+
+.footer-nav-btn-container .btn {
+  width: inherit;
+}
+
+.footer-nav-btn-container .btn:hover {
+  color: $yellow
+}
+
+.footer-nav-btn-container a:nth-of-type(2) {
+  margin: $baseUnit 0;
+  display: block;
+}
+
+.footer-nav-list {
+  list-style: square;
+  list-style-position: inside;
+  @media (min-width: $breakpoint-lg) {
+    direction: rtl;
+    text-align: right;
+  }
+}
+
+.footer-uva-container {
+  width: 100%;
+  padding: $baseUnit *2 0;
+}
+
+.footer-uva-logo {
+  display: block;
+  width: 100%;
+  @media (min-width: $breakpoint-lg) {
+    width: 50%;
+  }
+}
+
