--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -12,14 +12,14 @@
 
       <div class="footer-nav">
         <div class="footer-nav-btn-container">
-          <% link_to(config.http_prefix + 'projects.html#', {:class => ''}) do %> 
-          <button class="btn">Projects</button>
+          <% link_to(config.http_prefix + 'projects.html#', {:class => 'title textbar textbar-inverse footer-textbar-projects'}) do %> 
+          Projects
           <% end %>
-          <% link_to(config.http_prefix + 'publications.html#', {:class => ''}) do %> 
-          <button class="btn">Publications</button>
+          <% link_to(config.http_prefix + 'publications.html#', {:class => 'title textbar textbar-inverse footer-textbar-publications'}) do %> 
+          Publications
           <% end %>
-          <% link_to(config.http_prefix + '/#', {:class => ''}) do %> 
-          <button class="btn">Proces</button>
+          <% link_to(config.http_prefix + '/#', {:class => 'title textbar textbar-inverse footer-textbar-proces'}) do %> 
+          Proces
           <% end %>
         </div>
         <ul class="footer-nav-list">
