--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,5 +1,5 @@
 <div class="reference-inner-container">
-  <div class="reference">
+  <div class="reference <%= reference.data.type %>">
     <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.data.title %>">
       <h4 class="reference-header"><%= reference.data.title %></h4>
       <p class="reference-description"><%= reference.data.description %></p>
