--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -37,6 +37,7 @@
     width: 50%;
   }
 }
+
 .footer-nav-btn-container {
   display: flex;
   flex-direction: column;
@@ -46,17 +47,22 @@
   }
 }
 
-.footer-nav-btn-container .btn {
-  width: inherit;
+.footer-textbar-projects:hover {
+  color: $red;
 }
 
-.footer-nav-btn-container .btn:hover {
-  color: $yellow
-}
-
-.footer-nav-btn-container a:nth-of-type(2) {
-  margin: $baseUnit 0;
+.footer-textbar-publications {
+  margin: $thirdUnit 0;
   display: block;
+}
+
+.footer-textbar-publications:hover {
+  color: $blue;
+}
+
+
+.footer-textbar-proces:hover {
+  color: $yellow;
 }
 
 .footer-nav-list {
