--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -5,23 +5,21 @@ type: projects
 ---
 <% for item in 2..4 %>
 <% post_num = 1 %>
+<div class="posts-grouper">
 <%= partial("partials/navigation", :locals => { :which_is_link_active => item }) %>
-<% blog('projects').articles.each do |post| %>
+<% blog('publications').articles.each do |post| %>
 <% if post.data.item == item %>
 <div class="item item-post <% if (post_num % 2) == 1 %>item-post-left <% end %>">
   <div class="column-left">
     <div class="block">
       <h1 class="textbar title"><%= post.title %></h1>
       <p><%= post.body %></p>
-    </div>
-  </div>
-  <div class="column-right">
-    <div class="block block-authors">
-      <h3><%= post.data.teachers[0] %></h3>
+      <h3>-- <%= post.data.authors[0] %></h3>
     </div>
   </div>
 </div>
 <% post_num = post_num + 1 %>
 <% end %>
 <% end %>
+</div>
 <% end %>
