--- a/source/stylesheets/components/_block.scss
+++ b/source/stylesheets/components/_block.scss
@@ -80,3 +80,8 @@
 .publications .block-authors, .projects .block-authors {
   text-align: right;
 }
+
+.publications-nav {
+  list-style: square;
+  list-style-position: inside;
+}
