--- a/source/stylesheets/components/_item.scss
+++ b/source/stylesheets/components/_item.scss
@@ -7,7 +7,7 @@
 
 .item-header {
 	align-items: stretch;
-	min-height: calc(100vh - #{rem-calc(30)} - #{$halfUnit});
+	min-height: calc(((100vh - #{rem-calc(30)}) - #{$halfUnit*3}));
 	background: $yellow;
 }
 
@@ -44,6 +44,16 @@
 .item.item-about {
 	background: $yellow;
 	overflow: hidden;
+}
+
+.item-posts-header {
+	background: $blue;
+}
+
+.item-posts-header .image-publications {
+	padding: $baseUnit $baseUnit * 3;
+	width: 100%;
+	height:100%;
 }
 
 .item.item-post {
