--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ layout: main
 type: story
 ---
 <%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
-<div id="item-header" class="item item-header">
+<div id="item-header" class="item item-header story-color">
   <div class="column-left">
     <div class="block block-header-text">
       <h1 class="title textbar textbar-big">Coding_</h1>
