--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -3,8 +3,23 @@ title: Coding the Humanities
 layout: main
 type: projects
 ---
-
-
+<%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
+<div class="item item-header item-posts-header projects-color">
+  <div class="column-left">
+    <img class="image-publications" src="images/publications.svg" alt="">
+  </div>
+  <div class="column-right">
+    <div class="block">
+      <h1 class="title textbar">Projects</h1>
+      <p>This page shows all the projects</p>
+      <ul class="publications-nav">
+        <% blog('projects').articles.each do |post| %>
+          <li><%= post.title %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <% for item in 2..4 %>
 <% post_num = 1 %>
