--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,8 +1,9 @@
 <div class="reference-inner-container">
   <div class="reference <%= reference.data.type %>">
-    <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.data.title %>">
-      <h4 class="reference-header"><%= reference.data.title %></h4>
-    </a>
-    <p class="reference-description"><%= reference.data.description %></p>
+    <h4 class="reference-header"><%= reference.data.title %></h4>
+    <div class="reference-description">
+      <p ><%= reference.data.description %></p>
+      <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.data.title %>" class="reference-btn">  >> </a>
+    </div>
   </div>
 </div> 
