--- a/source/publications.html.erb
+++ b/source/publications.html.erb
@@ -4,12 +4,12 @@ layout: main
 type: publications
 ---
 <%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
-<div class="item item-header item-posts-header">
+<div class="item item-header item-posts-header publications-color">
   <div class="column-left">
     <img class="image-publications" src="images/publications.svg" alt="">
   </div>
   <div class="column-right">
-    <div>
+    <div class="block">
       <h1 class="title textbar">Publications</h1>
       <p>This page shows all the publications</p>
       <ul class="publications-nav">
