--- a/source/stylesheets/components/_item.scss
+++ b/source/stylesheets/components/_item.scss
@@ -57,16 +57,10 @@
 	padding-bottom: $baseUnit *5;
 }
 
+.item.item-project {
+	align-items: flex-start;
+}
+
 .posts-grouper div:first-of-type.item.item-post {
 	border-top: none;
-}
-
-.item.item-post.item-post-left {
-	flex-direction: row;
-	text-align: left;
-}
-
-.item-post-image {
-	// height: $baseUnit * 6;
-	// width: 100%;
 }
