some styling and references

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -18,7 +18,7 @@
           <% link_to(config.http_prefix + 'publications.html#', {:class => 'title textbar textbar-inverse footer-textbar-publications'}) do %> 
           Publications
           <% end %>
-          <% link_to(config.http_prefix + '/#', {:class => 'title textbar textbar-inverse footer-textbar-proces'}) do %> 
+          <% link_to(config.http_prefix + '#', {:class => 'title textbar textbar-inverse footer-textbar-proces'}) do %> 
           Proces
           <% end %>
         </div>
