--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -3,7 +3,7 @@
     <h4 class="reference-header"><%= reference.data.title %></h4>
     <div class="reference-description">
       <p ><%= reference.data.description %></p>
-      <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.data.title %>" class="reference-btn">  >> </a>
+      <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.slug %>" class="reference-btn">  >> </a>
     </div>
   </div>
 </div> 
