--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -13,8 +13,12 @@ type: projects
       <h1 class="title textbar">Projects</h1>
       <p>This page shows all the projects</p>
       <ul class="publications-nav">
+        <% for item in 2..4 %>
         <% blog('projects').articles.each do |post| %>
-          <li><%= post.title %></li>
+        <% if post.data.item == item %>
+          <a href="<%= config.http_prefix + post.data.type + '.html#' + post.slug %>"><li><%= post.title %></li></a>
+        <% end %>
+        <% end %>
         <% end %>
       </ul>
     </div>
@@ -22,10 +26,9 @@ type: projects
 </div>
 
 <% for item in 2..4 %>
-<% post_num = 1 %>
-<div class="posts-grouper">
 <% blog('projects').articles.each do |post| %>
 <% if post.data.item == item %>
+<a id="<%= post.slug %>"></a>
 <div class="item item-project">
   <div class="column-left">
     <div class="block">
@@ -34,8 +37,6 @@ type: projects
     </div>
   </div>
 </div>
-<% post_num = post_num + 1 %>
 <% end %>
 <% end %>
-</div>
 <% end %>
