--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -2,7 +2,7 @@
   <div class="reference <%= reference.data.type %>">
     <h4 class="reference-header"><%= reference.data.title %></h4>
     <div class="reference-description">
-      <p ><%= reference.data.description %></p>
+      <p ><%= reference.data.summery %></p>
       <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.slug %>" class="reference-btn">  >> </a>
     </div>
   </div>
