--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -12,6 +12,10 @@
   color: $lightgray;
 }
 
+.footer a {
+  color: $lightgray;
+}
+
 .footer-description {
   width: 100%;
   @media (min-width: $breakpoint-lg) {
