--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,8 +1,3 @@
-.hammer {
-  width: 100%;
-  background: $yellow;
-}
-
 .footer {
   display: flex;
   flex-wrap: wrap;
@@ -46,15 +41,15 @@
   }
 }
 
-.footer-textbar-projects:hover {
+a.footer-textbar-projects:hover {
   color: $red;
 }
 
-.footer-textbar-publications:hover {
+a.footer-textbar-publications:hover {
   color: $blue;
 }
 
-.footer-textbar-proces:hover {
+a.footer-textbar-process:hover {
   color: $yellow;
 }
 
@@ -65,6 +60,10 @@
     direction: rtl;
     text-align: right;
   }
+}
+
+.footer-process-link:hover {
+  text-decoration: underline;
 }
 
 .footer-uva-container {
