--- a/source/stylesheets/components/_reference.scss
+++ b/source/stylesheets/components/_reference.scss
@@ -31,15 +31,7 @@
   margin: 0;
 }
 
-.reference.projects .reference-btn:hover {
-  color: $red;
-}
-
-.reference.publications .reference-btn:hover {
-  color: $blue;
-}
-
-.reference .reference-description {
+.reference-description {
   overflow: hidden;
   height: auto;
   max-height: 0;
@@ -52,10 +44,18 @@
 }
 
 .reference-btn {
-  display: block;
+  // display: block;
   width: $baseUnit * 3;
   margin: 0 0 0 auto;
-  text-align: center;
-  background: black;
-  color: white;
+  // text-align: center;
+  // background: black;
+  // color: white;
+}
+
+.reference.projects .reference-btn:hover {
+  color: $red;
+}
+
+.reference.publications .reference-btn:hover {
+  color: $blue;
 }
