--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -35,10 +35,16 @@ type: projects
       <h1 class="textbar title"><%= post.title %></h1>
       <p><%= post.body %></p>
       <div class="links-btn-container">
-        <a href="<%= '/#item-body-' + item.to_s %>" class="btn btn-inverse btn-pub-proj btn-back"> &lt;&lt;&nbsp;Back </a>
-        <% if post.data.studentProject %>
-        <a href="<%= post.data.studentProject.url %>" class="btn btn-inverse btn-pub-proj btn-student-project"> 
-          Student Projects</a>
+        <a href="<%= '/#item-body-' + item.to_s %>" class="btn btn-inverse btn-back"> &lt;&lt;&nbsp;Back </a>
+        <% if post.data.studentProjects %>
+        <div class="btn btn-inverse btn-student-project-container">
+          <div class="btn btn-inverse btn-student-project">Student Projects</div>
+          <ul>
+            <% post.data.studentProjects.each do |project| %>
+            <li><a href="<%= project.url %>"> <%= project.title %></a></li>
+            <% end %>
+          </ul>
+        </div>
         <% end %>
         <% if post.data.reference %>
         <a href="<%= post.data.reference.url %>" class="btn btn-inverse btn-pub-proj btn-site"> 
