--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -37,7 +37,7 @@ type: projects
       <div class="links-btn-container">
         <a href="<%= '/#item-body-' + item.to_s %>" class="btn btn-inverse btn-back"> &lt;&lt;&nbsp;Back </a>
         <% if post.data.studentProjects %>
-        <div class="btn btn-inverse btn-student-project-container">
+        <div class="btn-student-project-container">
           <div class="btn btn-inverse btn-student-project">Student Projects</div>
           <ul>
             <% post.data.studentProjects.each do |project| %>
@@ -47,7 +47,7 @@ type: projects
         </div>
         <% end %>
         <% if post.data.reference %>
-        <a href="<%= post.data.reference.url %>" class="btn btn-inverse btn-pub-proj btn-site"> 
+        <a href="<%= post.data.reference.url %>" class="btn btn-inverse btn-site"> 
           Site&nbsp;&gt;&gt; </a>
         <% end %>
       </div>
