--- a/source/stylesheets/components/_block.scss
+++ b/source/stylesheets/components/_block.scss
@@ -105,10 +105,9 @@
 }
 
 .btn-student-project-container ul {
-  padding: 0 rem-calc(20);
-  list-style-position: inside;
   margin: 0;
   max-height: 0;
+  text-align: center;
   overflow: hidden;
   transition: all 1s linear;
 }
