--- a/source/stylesheets/components/_reference.scss
+++ b/source/stylesheets/components/_reference.scss
@@ -38,7 +38,12 @@
   transition: max-height 0.5s linear;
 }
 
-.reference:hover .reference-description, .reference:active .reference-description {
+.reference:hover .reference-description {
+  max-height: $baseUnit * 6;
+  transition: max-height 0.5s linear 0.5s;
+}
+
+.reference:active .reference-description {
   max-height: $baseUnit * 6;
   transition: max-height 0.5s linear 0.5s;
 }
