--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,6 +1,7 @@
 <div class="reference-inner-container">
   <div onclick="" class="reference <%= reference.data.type %>">
     <h4 class="reference-header"><%= reference.data.title %></h4>
+    <!-- onclick is iphone hover hack -->
     <div onclick="" class="reference-description">
       <p ><%= reference.data.summery %></p>
       <a href="<%= config.http_prefix + reference.data.type + '.html#' + reference.slug %>" class="btn btn-inverse reference-btn">  >> </a>
