--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -37,7 +37,8 @@ type: projects
       <div class="links-btn-container">
         <a href="<%= '/#item-body-' + item.to_s %>" class="btn btn-inverse btn-back"> &lt;&lt;&nbsp;Back </a>
         <% if post.data.studentProjects %>
-        <div class="btn-student-project-container">
+        <!-- onclick is iphone hover hack -->
+        <div onclick="" class="btn-student-project-container">
           <div class="btn btn-inverse btn-student-project">Student Projects</div>
           <ul>
             <% post.data.studentProjects.each do |project| %>
