wip - refactor styling

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -26,6 +26,8 @@ $imageHeight: ($cardWidth / 12) * 7;
 @import 'partials/tags';
 @import 'partials/buttons';
 
+@import 'components/story';
+@import 'components/page';
 @import 'components/nav';
 @import 'components/footer';
 @import 'components/item';
