--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -5,15 +5,32 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   min-height: 100%;
   background: $lightgray;
 }
 
 .main {
-  position: relative;
   display: flex;
   flex-direction: column;
   min-height: 100%;
   overflow: hidden;
+}
+
+.item {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item .column-left {
+  width: $baseUnit * 15;
+  @media (min-width: $breakpoint-lg) {
+    width: $baseUnit * 15;
+  }
+}
+
+.item .column-right {
+  width: $baseUnit * 5;
+  @media (min-width: $breakpoint-lg) {
+    width: $baseUnit * 5;
+  }
 }
